--- a/Registros/Views/Shared/_Layout.cshtml
+++ b/Registros/Views/Shared/_Layout.cshtml
@@ -40,11 +40,11 @@
                                     <ul class="dropdown-menu" role="menu">
                                         <li><a href="Clientes">Registro Clientes</a></li>
                                         <li><a href="Empleados">Registro Empleados</a></li>
-                                        <li><a href="#">Something else here</a></li>
+                                        @*<li><a href="#">Something else here</a></li>
                                         <li class="divider"></li>
                                         <li><a href="#">Separated link</a></li>
                                         <li class="divider"></li>
-                                        <li><a href="#">One more separated link</a></li>
+                                        <li><a href="#">One more separated link</a></li>*@
                                     </ul>
                                 </li>
                             </ul>
